--- a/client/src/components/css/Showcase.css
+++ b/client/src/components/css/Showcase.css
@@ -1,11 +1,35 @@
+.showcase {
+  max-width: 100%;
+}
+
 .showcase .container {
   z-index: -1;
   position: relative;
+  overflow-x: hidden;
+}
+
+.showcase .container .banner .banner__content {
+  background-color: #000;
+  padding: 20px 10px;
+  text-align: center;
+  max-width: 100%;
+}
+
+.showcase .container .banner .banner__content h1 {
+  color: #fff;
+  text-transform: uppercase;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.showcase .container .banner .banner__content p {
+  text-transform: capitalize;
+  color: rgba(219, 219, 219, 0.8);
 }
 
 .showcase .container .banner img {
   width: 100%;
-  height: 100%;
+  max-width: 100%;
+  height: 360px;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -61,6 +85,126 @@
 @media screen and (min-width: 580px) {
   .showcase .container .content__wrapper .content {
     font-size: 1.3em;
+  }
+}
+
+@media screen and (min-width: 760px) {
+  .showcase .container .banner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    max-width: 100%;
+  }
+  .showcase .container .banner .banner__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    text-align: left;
+    padding: 0px 20px;
+    width: 100%;
+  }
+  .showcase .container .banner .banner__content h1 {
+    font-size: 2.5rem;
+  }
+  .showcase .container .banner .banner__content p {
+    font-size: 1.4rem;
+  }
+  .showcase .container .banner img {
+    height: 620px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .showcase .container .banner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    max-width: 100%;
+  }
+  .showcase .container .banner .banner__content {
+    -webkit-box-flex: 0.3;
+        -ms-flex: 0.3;
+            flex: 0.3;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    text-align: left;
+    padding: 0px 40px;
+    width: 100%;
+  }
+  .showcase .container .banner .banner__content h1 {
+    font-size: 3rem;
+  }
+  .showcase .container .banner .banner__content p {
+    font-size: 1.5rem;
+  }
+  .showcase .container .banner img {
+    -webkit-box-flex: 0.7;
+        -ms-flex: 0.7;
+            flex: 0.7;
+    height: 620px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .showcase .container .banner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    max-width: 100%;
+  }
+  .showcase .container .banner .banner__content {
+    -webkit-box-flex: 0.2;
+        -ms-flex: 0.2;
+            flex: 0.2;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    text-align: left;
+    padding: 0px 20px;
+    width: 100%;
+  }
+  .showcase .container .banner .banner__content h1 {
+    font-size: 4rem;
+  }
+  .showcase .container .banner .banner__content p {
+    font-size: 1.7rem;
+  }
+  .showcase .container .banner img {
+    -webkit-box-flex: 0.8;
+        -ms-flex: 0.8;
+            flex: 0.8;
+    height: 660px;
   }
 }
 /*# sourceMappingURL=Showcase.css.map */
