--- a/client/src/components/css/Showcase.scss
+++ b/client/src/components/css/Showcase.scss
@@ -1,73 +1,180 @@
-.showcase{
-    .container{
-        z-index: -1;
-        position: relative;
-        .banner{
-          img{
-             width: 100%; 
-             height: 100%;
-             object-fit: cover;
-          }
+.showcase {
+  max-width: 100%;
+  .container {
+    z-index: -1;
+    position: relative;
+    overflow-x: hidden;
+    .banner {
+      .banner__content {
+        background-color: #000;
+        padding: 20px 10px;
+        text-align: center;
+        max-width: 100%;
+        h1 {
+          color: #fff;
+          text-transform: uppercase;
+          font-family: Georgia, 'Times New Roman', Times, serif;
         }
-        .content__wrapper{
-            display: none;
-            position: absolute;
-            bottom: 0px;
-            right: 0;
-            background-color: rgba(240, 240, 240, 0.5);
-            width: 100%;
-            padding: 10px;    
+        p {
+          text-transform: capitalize;
+          color: rgba(219, 219, 219, 0.8);
         }
-        .content{
-            margin-bottom: 30px;
-            font-size: 1rem;
-            .title{
-                margin: 0 0 10px;
-                text-align: center;
-                h2{
-                    color: rgb(255, 0, 0);
-                    text-transform: capitalize;
-                }
-            }
-            .body{
-                text-align: center;
-                h3{
-                    font-weight: 900;
-                    color: rgb(0, 0, 0);
-                }
-                p{
-                    margin: 10px 0;
-                    color: rgb(22, 22, 22);
-                    font-weight: 700;
-                }
-                button{
-                    margin: 10px 0 0;
-                    color: rgb(255, 255, 255);
-                    background-color: chocolate;
-                    width: 50%;
-                    cursor: pointer;
-                }
-            }
-        }
+      }
+      img {
+        width: 100%;
+        max-width: 100%;
+        height: 360px;
+        object-fit: cover;
+      }
     }
+    .content__wrapper {
+      display: none;
+      position: absolute;
+      bottom: 0px;
+      right: 0;
+      background-color: rgba(240, 240, 240, 0.5);
+      width: 100%;
+      padding: 10px;
+    }
+    .content {
+      margin-bottom: 30px;
+      font-size: 1rem;
+      .title {
+        margin: 0 0 10px;
+        text-align: center;
+        h2 {
+          color: rgb(255, 0, 0);
+          text-transform: capitalize;
+        }
+      }
+      .body {
+        text-align: center;
+        h3 {
+          font-weight: 900;
+          color: rgb(0, 0, 0);
+        }
+        p {
+          margin: 10px 0;
+          color: rgb(22, 22, 22);
+          font-weight: 700;
+        }
+        button {
+          margin: 10px 0 0;
+          color: rgb(255, 255, 255);
+          background-color: chocolate;
+          width: 50%;
+          cursor: pointer;
+        }
+      }
+    }
+  }
 }
 
 // media query
 
 @media screen and (min-width: 580px) {
-    .showcase{
-        .container{
-            .content__wrapper{
-                // display: flex;
-                // justify-items: center;
-                // align-items: center;
-                // top: 0;
-                // left: 0;
-                // max-width: 50%;
-                .content{
-                    font-size: 1.3em;
-                }
-            }
+  .showcase {
+    .container {
+      .content__wrapper {
+        // display: flex;
+        // justify-items: center;
+        // align-items: center;
+        // top: 0;
+        // left: 0;
+        // max-width: 50%;
+        .content {
+          font-size: 1.3em;
         }
+      }
     }
+  }
+}
+
+@media screen and (min-width: 760px) {
+  .showcase {
+    .container {
+      .banner {
+        display: flex;
+        max-width: 100%;
+        .banner__content {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: flex-start;
+          text-align: left;
+          padding: 0px 20px;
+          width: 100%;
+          h1 {
+            font-size: 2.5rem;
+          }
+          p {
+            font-size: 1.4rem;
+          }
+        }
+        img {
+          height: 620px;
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 992px) {
+  .showcase {
+    .container {
+      .banner {
+        display: flex;
+        max-width: 100%;
+        .banner__content {
+          flex: 0.3;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: flex-start;
+          text-align: left;
+          padding: 0px 40px;
+          width: 100%;
+          h1 {
+            font-size: 3rem;
+          }
+          p {
+            font-size: 1.5rem;
+          }
+        }
+        img {
+          flex: 0.7;
+          height: 620px;
+        }
+      }
+    }
+  }
+}
+@media screen and (min-width: 1200px) {
+  .showcase {
+    .container {
+      .banner {
+        display: flex;
+        max-width: 100%;
+        .banner__content {
+          flex: 0.2;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: flex-start;
+          text-align: left;
+          padding: 0px 20px;
+          width: 100%;
+          h1 {
+            font-size: 4rem;
+          }
+          p {
+            font-size: 1.7rem;
+          }
+        }
+        img {
+          flex: 0.8;
+          height: 660px;
+        }
+      }
+    }
+  }
 }
